--- a/ShoppingAppp/app/src/main/res/values/strings.xml
+++ b/ShoppingAppp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ShoppingAppp</string>
+    <string name="app_name">Blurry wares</string>
     <string name="most_popular">Most popular</string>
 </resources>
